# MatchMaker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app_data/: game_data.json  user_data.json
games/: bot.py  dices.bat  dices.py  dices.sh  launcher.py  russian_roullete.bat  russian_roullete.py  russian_roullete.sh  tic_tac_toe.bat  tic_tac_toe.py  tic_tac_toe.sh
src/: main.cpp
src/app/: app.cpp  app.h  config.h.in  mock_user_behavior.cpp  mock_user_behavior.h
src/engine/game/: game.cpp  game.h  game_executor.cpp  game_executor.h  game_registry.cpp  game_registry.h
src/engine/io/: io_handler.h  json_io_handler.cpp  json_io_handler.h
src/engine/matchmaking/: matchmaking_engine.cpp  matchmaking_engine.h
src/engine/pool/: user_pool_manager.cpp  user_pool_manager.h
src/engine/user/: user.cpp  user.h  user_registry.cpp  user_registry.h
src/models/dashboard/: dashboard_model.cpp  dashboard_model.h  dashboard_serializer.cpp  dashboard_serializer.h
src/models/user_table/: user_table_model.cpp  user_table_model.h
src/viewers/dashboard/: dashboard_widget.cpp  dashboard_widget.h
src/viewers/dialogs/: add_user_dialog.cpp  add_user_dialog.h  remove_user_dialog.cpp  remove_user_dialog.h
src/viewers/mainwindow/: mainwindow.cpp  mainwindow.h
src/viewers/toolbar/: app_toolbar.cpp  app_toolbar.h
src/viewers/user_table/: user_table_context_menu.cpp  user_table_context_menu.h  user_table_widget.cpp  user_table_widget.h
tests/: test_config.h.in  test_game.cpp  test_game_executor.cpp  test_json_io.cpp  test_matchmaking_engine.cpp  test_user.cpp  test_user_pool_mgr.cpp  test_user_registry.cpp
tests/games/: afw.bat  always_first_wins.py  game.bat  game_for_test.py
